# teamearth

./: .gitignore
My_result ( hchan1)/: texter.rar
My_result ( hchan1)/5-6-15( success one)/: text.dcm
My_result ( hchan1)/regist/src/: texter.cxx
Submission_files/: CSC621-821 Final Project.pptx
Submission_files/Quantification/renderer_distance/src/: CMakeLists.txt
Submission_files/Quantification/renderer_slice/src/: SmartVolumeMapper.cxx
Submission_files/Quantification/volume estimator/: vtk_voxel_per_intensity.cpp
Submission_files/Registration/Dicom reader/src/: CMakeLists.txt
Submission_files/Registration/regist/src/: CMakeLists.txt  DeformableRegistration16.cxx
Submission_files/Segmentation/WatershedSegmentation2/: WatershedSegmentation2.cxx
demon/output/: rat_out_1.mha  rat_out_50.mha
demon/src/: CMakeLists.txt  DeformableRegistration2.cxx
example/: QuickViewDemo.tar
example/QuickViewDemo/src/: CMakeLists.txt  QuickViewDemo.cxx
fltk1/fltk_test_1/: fltk_test_1.sln
fltk1/fltk_test_1/fltk_test_1/: Source.cpp  fltk_test_1.vcxproj
fltk1/fltk_test_1/fltk_test_1/Debug/: vc140.idb
fltk1/fltk_test_1/fltk_test_1/Debug/fltk_test_1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  fltk_test_1.lastbuildstate  link.command.1.tlog  link.read.1.tlog
massprop/src/: CMakeLists.txt  polyDataVolume.cxx
renderer/src/: CMakeLists.txt  SmartVolumeMapper.cxx
renderer2/src/: SmartVolumeMapper.cxx  backup.cxx  opacityvalues.cxx
renderer_distance/src/: SmartVolumeMapper.cxx
renderer_slice/src/: SmartVolumeMapper.cxx
segmentation/: Watershed Segmentation Documentation.docx  ~$tershed Segmentation Documentation.docx
segmentation/WatershedImageFilter/: CMakeLists.txt  WatershedImageFilter.cxx
segmentation/WatershedSegmentation2/: CMakeLists.txt  WatershedSegmentation2.cxx
smooth3d/src/: CMakeLists.txt  text.cxx
smoothfilter3/src/: DiscreteGaussianImageFilter.cxx
smoothfilter3d/src/: CMakeLists.txt  DiscreteGaussianImageFilter.cxx
teamearth/checkborad/src/: CMakeLists.txt  CheckerBoardImageFilter.cxx
teamearth/demon/output/: rat_out_10.mha  rat_out_100.mha
teamearth/fltk1/fltk_test_1/Debug/: fltk_test_1.ilk
teamearth/fltk1/fltk_test_1/fltk_test_1/Debug/fltk_test_1.tlog/: link.write.1.tlog
teamearth/regist/src/: CMakeLists.txt  texter.cxx
teamearth/vtk1/src/: CMakeLists.txt
volume estimator/: vtk_volume_estimator .cpp  vtk_voxel_per_intensity.cpp
vtk2/src/: CMakeLists.txt
vtk3/src/: CMakeLists.txt
